    target fails. Closes: #601037
  * Fix deprecated command list on translated debhelper(7) man pages.
    Closes: #601204
  * dh: Improve filtering in dh_listpackages example. Closes: #604561
  * dh: Add support for build-arch, build-indep, install-arch and
    install-indep sequences. Closes: #604563
    (Thanks, Roger Leigh)
  
  [ Valery Perrin ]
  * update french translation.
  * Fix french misspelling.
  * French translation update after massive man page typography 

 -- Joey Hess <joeyh@debian.org>  Sat, 07 Aug 2010 11:27:24 -0400

debhelper (8.0.0) unstable; urgency=low

  [ Carsten Hey ]
  * dh_fixperms: Ensure files in /etc/sudoers.d/ are mode 440. Closes: #589574

  [ Joey Hess ]
  * Finalized v8 mode, which is the new recommended default.

 -- Joey Hess <joeyh@debian.org>  Sat, 07 Aug 2010 11:27:24 -0400

debhelper (7.9.3) unstable; urgency=low

  * perl_makemaker: import compat(). Closes: #587654

 -- Joey Hess <joeyh@debian.org>  Wed, 30 Jun 2010 14:42:09 -0400

debhelper (7.9.2) unstable; urgency=low

  * In v8 mode, stop passing packlist=0 in perl_makemaker buildsystem,
    since perl_build is tried first. Avoids the makemaker warning message
    introduced by the fix to #527990.

 -- Joey Hess <joeyh@debian.org>  Tue, 29 Jun 2010 17:41:41 -0400

debhelper (7.9.1) unstable; urgency=low

  * Started work on Debhelper v8. It is still experimental, and more
    changes are planned for that mode.
  * dh_installman: Support .so links relative to the current section.
  * dh_installman: Avoid converting .so links to symlinks if the link
    target is not present in the same binary package, on advice of 
    Colin Watson. (To support eventual so search paths.)
  * Add deprecation warning for dh_clean -k.
  * dh_testversion: Removed this deprecated and unused command.
  * debian/compress files are now deprecated. Seems only one package
    (genesis) still uses them.
  * dh_fixperms: Tighten globs used to find library .so files,