@@ -22,6 +22,7 @@ act on if passed the same options.
 
 =cut
 
+$dh{BLOCK_NOOP_WARNINGS}=1;
 init();
 inhibit_log();
 print join("\n",@{$dh{DOPACKAGES}})."\n";
