@@ -25,6 +25,8 @@ debhelper (8.1.0) UNRELEASED; urgency=low
   * dh: Add support for build-arch, build-indep, install-arch and
     install-indep sequences. Closes: #604563
     (Thanks, Roger Leigh)
+  * dh_listpackages: Do not display warnings if options cause no packages
+    to be listed.
   
   [ Valery Perrin ]
   * update french translation.
